--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
     "recharts": "^2.15.3",
-    "zod": "^3.25.57"
+    "zod": "^3.25.57",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
