--- a/apps/api/src/main/resources/application.properties
+++ b/apps/api/src/main/resources/application.properties
@@ -1,1 +1,30 @@
-spring.application.name=api
+# Archivo application.properties
+
+# Nombre de la aplicación
+spring.application.name=${APPLICATION_NAME}
+
+# Configuración de la base de datos
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_HIBERNATE_DIALECT}
+
+# Configuración de niveles de logging para diferentes componentes de Spring Boot
+logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB}
+logging.level.org.springframework.http=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_HTTP}
+logging.level.org.springframework.security=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY}
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerAdapter=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB_SERVLET_MVC_METHOD_ANNOTATION_REQUESTMAPPINGHANDLERADAPTER}
+
+# Configuración JWT
+app.jwt.secret=${TOKEN_SECRET}
+app.jwt.expiration=${TOKEN_EXPIRATION_TIME}
+app.jwt.algorithm=${TOKEN_ALGORITHM}
+app.jwt.iterations=${TOKEN_ITERATIONS}
+app.jwt.key-length=${TOKEN_KEY_LENGTH}
+app.jwt.salt=${TOKEN_SALT}
+
+# Configuración de CORS
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
