--- a/apps/api/src/main/resources/application.properties
+++ b/apps/api/src/main/resources/application.properties
@@ -28,3 +28,6 @@ app.jwt.salt=${TOKEN_SALT}
 
 # Configuración de CORS
 app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
+
+# llave identificadora de la aplicación
+app.application.identifier=${APPLICATION_KEY}
