✨ Añadir dependencia para soporte de Programación Orientada a Aspectos (AOP) en Spring.

--- a/apps/api/pom.xml
+++ b/apps/api/pom.xml
@@ -194,6 +194,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- Proporciona soporte para Aspect-Oriented Programming (AOP) en Spring -->
+		<!-- spring-boot-starter-aop -->	
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
