--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.6",
     "@hookform/resolvers": "^5.1.1",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.120.20",
