--- a/apps/api/src/main/resources/application.properties
+++ b/apps/api/src/main/resources/application.properties
@@ -1,22 +1,28 @@
 # Archivo application.properties
 
 # Nombre de la aplicación
-spring.application.name=${APPLICATION_NAME}
+spring.application.name=${APPLICATION_NAME:Centro de Control de Acceso}
 
 # Configuración de la base de datos
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de JPA
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.properties.hibernate.dialect=${SPRING_JPA_HIBERNATE_DIALECT}
+# Configuración de JPA (Hibernate)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configuración de Flyway
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
 
 # Configuración de niveles de logging para diferentes componentes de Spring Boot
-logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB}
-logging.level.org.springframework.http=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_HTTP}
-logging.level.org.springframework.security=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY}
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerAdapter=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB_SERVLET_MVC_METHOD_ANNOTATION_REQUESTMAPPINGHANDLERADAPTER}
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.http=INFO
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerAdapter=INFO
 
 # Configuración JWT
 app.jwt.secret=${TOKEN_SECRET}
@@ -29,5 +35,5 @@ app.jwt.salt=${TOKEN_SALT}
 # Configuración de CORS
 app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
 
-# llave identificadora de la aplicación
+# Llave identificadora de la aplicación
 app.application.identifier=${APPLICATION_KEY}
